--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     </style>
 </head>
 <body>
-    <a href='https://github.com/XN-Wang/passkit-demo/raw/5e227b3e2731e6583edc369465e94b2f5c00addc/0x9C3C66b2b3bB455657299ed1fda33e70cEB651F9-2-eb1083793994aae939127a4481792f58.pkpass'>Click Me!</a>
+    <button onclick="download()">Click Me!</button>
+    <script>
+        function download() {
+            window.open('https://github.com/XN-Wang/passkit-demo/raw/refs/heads/master/0x9C3C66b2b3bB455657299ed1fda33e70cEB651F9-2-eb1083793994aae939127a4481792f58.pkpass')
+        }
+    </script>
 </body>
 </html>
